<resources>
    <string name="app_name">CaryPark</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="buy_button">Buy</string>
    <string name="description">Instantly gain special powers when ordering a super cookie</string>
    <string name="lauren_nobel">Lauren Nobel</string>
    <string name="merchant_id_not_set_message"><![CDATA[To request a Google Pay nonce, replace <b>ConfigHelper.GOOGLE_PAY_MERCHANT_ID</b> with your Google Pay Merchant ID.]]></string>
    <string name="merchant_id_not_set_title">Missing Google Pay Merchant ID</string>
    <string name="missing_application_id_message"><![CDATA[Please update <b>sqip.SQUARE_APPLICATION_ID</b> in <b>AndroidManifest.xml</b> if you want to be able to create a nonce.]]></string>
    <string name="missing_application_id_title">Missing Square Application ID</string>
    <string name="network_failure_title">Network Error</string>
    <string name="network_failure">There was an error processing the payment, please check your network connection.</string>
    <string name="pay_button">Pay 🍪</string>
    <string name="pay_with_card">Pay with card</string>
    <string name="place_your_order">Place your order</string>
    <string name="price">$1.00</string>
    <string name="refund_helper_text">You can refund this transaction through your Square dashboard, go to squareup.com/dashboard.</string>
    <string name="retry">Retry</string>
    <string name="server_host_not_set_message"><![CDATA[Check logcat <b>Info</b> messages for a CURL command to charge the nonce, or replace <b>ConfigHelper.CHARGE_SERVER_HOST</b> with your server host.]]></string>
    <string name="server_host_not_set_title">Nonce generated but not charged</string>
    <string name="ship_to">Ship to</string>
    <string name="successful_order_message">Go to your Square dashboard to see this order reflected in the sales tab.</string>
    <string name="successful_order_title">Your order was successful</string>
    <string name="super_cookie">Super Cookie</string>
    <string name="total">Total</string>
    <string name="unsuccessful_order">Your order was not successful</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="mapbox_access_token">pk.eyJ1IjoieWVzbWluYSIsImEiOiJjbDJ2em01a3MwMmN5M2xuenpqZnEyZ2NxIn0.9a_hRfIs7kjqLkkkEon7Yg</string>

</resources>