<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/order_sheet_padding"
        >

        <ImageButton
            android:id="@+id/close_sheet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_your_order"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/close_sheet_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/close_sheet_button"
            />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_info_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/order_sheet_info_horizontal_padding"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_info_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/order_sheet_info_horizontal_padding"
            />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/column_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids=" total"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="8dp" />


        <View
            android:id="@+id/ship_separator"
            android:layout_width="0dp"
            android:layout_height="@dimen/sheetSeparatorHeight"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toStartOf="@id/right_info_guide"
            app:layout_constraintStart_toStartOf="@id/left_info_guide"
            tools:layout_editor_absoluteY="161dp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingEnd="32dp"
            android:text="@string/total"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/left_info_guide"
            app:layout_constraintTop_toBottomOf="@+id/ship_separator"
            />


        <TextView
            android:id="@+id/price12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/price"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/right_info_guide"
            app:layout_constraintStart_toEndOf="@id/column_separator"
            app:layout_constraintTop_toBottomOf="@+id/ship_separator"
            />

        <View
            android:id="@+id/price_separator"
            android:layout_width="0dp"
            android:layout_height="@dimen/sheetSeparatorHeight"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toStartOf="@id/right_info_guide"
            app:layout_constraintStart_toStartOf="@id/left_info_guide"
            app:layout_constraintTop_toBottomOf="@+id/price12"
            />


        <TextView
            android:id="@+id/refund"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/refund_helper_text"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/right_info_guide"
            app:layout_constraintStart_toEndOf="@id/left_info_guide"
            app:layout_constraintTop_toBottomOf="@+id/price_separator"
            />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/button_middle_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="206dp" />

        <Button
            android:id="@+id/pay_with_card_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/pay_with_card"
            app:layout_constraintEnd_toStartOf="@id/button_middle_guide"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refund"
            />

        <Button
            android:id="@+id/pay_with_google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="8dp"
            android:text="locale"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_middle_guide"
            app:layout_constraintTop_toTopOf="@id/pay_with_card_button"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
